Use lieers and notmuch with neomutt

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,4 +1,10 @@
-# TokyoNight colors for Kitty
+# vim:ft=kitty
+
+## name: Tokyo Night Storm
+## license: MIT
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty_tokyonight_storm.conf
+
 
 background #24283b
 foreground #c0caf5
