--- a/.luarc.json
+++ b/.luarc.json
@@ -1,4 +1,10 @@
 {
-  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "Lua.diagnostics.globals": ["awesome", "client", "screen", "root"]
+    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "Lua.diagnostics.globals": [
+        "awesome",
+        "client",
+        "screen",
+        "root"
+    ],
+    "Lua.workspace.checkThirdParty": false
 }
