feat: darkman (finally!)

--- a/modules/common/kitty/base16-tomorrow.conf
+++ b/modules/common/kitty/base16-tomorrow.conf
@@ -1,5 +1,9 @@
-# Base16 Tomorrow - kitty color config
-# Scheme by Chris Kempson (http://chriskempson.com)
+# vim: ft=kitty
+
+## name: Base16 Tomorrow Night Eighties
+## author: Chris Kempson
+## upstream: https://github.com/rebelot/kanagawa.nvim/
+
 background #ffffff
 foreground #4d4d4c
 selection_background #4d4d4c
