--- a/modules/common/kitty/base16-tomorrow-night-eighties.conf
+++ b/modules/common/kitty/base16-tomorrow-night-eighties.conf
@@ -1,5 +1,9 @@
-# Base16 Tomorrow Night - kitty color config
-# Scheme by Chris Kempson (http://chriskempson.com)
+# vim:ft=kitty
+
+## name: Base16 Tomorrow Night Eighties
+## author: Chris Kempson
+## upstream: https://github.com/rebelot/kanagawa.nvim/
+
 background #2d2d2d
 foreground #cccccc
 selection_background #cccccc
